[package]
name = "seady"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed-map = "0.8.0"
colorous = { version = "1.0.8", optional = true }
plotters = { version = "0.3.4", optional = true }

[features]
plotting = ["dep:plotters", "dep:colorous"]